--- a/UTShuttleSwift/Base.lproj/Main.storyboard
+++ b/UTShuttleSwift/Base.lproj/Main.storyboard
@@ -1,11 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16F73" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="mUU-wy-Hhu">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16F73" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="KUc-qr-H3l">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
+        <capability name="Alignment constraints with different attributes" minToolsVersion="5.1"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -31,7 +34,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
-                        <color key="backgroundColor" red="0.36470588240000001" green="0.7725490196" blue="0.73333333329999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" red="0.19607843137254902" green="0.58823529411764708" blue="0.5490196078431373" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="b5e-3h-Rfj" firstAttribute="centerY" secondItem="47I-Y0-CPP" secondAttribute="centerY" id="HMW-y4-rkK"/>
                             <constraint firstItem="QMP-YV-QKQ" firstAttribute="centerX" secondItem="47I-Y0-CPP" secondAttribute="centerX" id="QZl-Hi-ETX"/>
@@ -44,16 +47,122 @@
                             <constraint firstItem="b5e-3h-Rfj" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="47I-Y0-CPP" secondAttribute="leading" constant="1" id="xdS-W2-ZBK"/>
                         </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="Bdt-rX-Fa1"/>
                     <connections>
                         <outlet property="loadingLabel" destination="QMP-YV-QKQ" id="drW-U3-zmv"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Pg7-6N-yZi" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="210" y="117"/>
+            <point key="canvasLocation" x="870" y="116"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="SV2-BL-jMO">
+            <objects>
+                <viewController id="2gT-60-qfe" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="0tD-x3-Wro"/>
+                        <viewControllerLayoutGuide type="bottom" id="8Ci-fH-sSo"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="Mz2-on-aOQ">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" verticalHuggingPriority="255" verticalCompressionResistancePriority="749" image="logoUTShuttleDark" translatesAutoresizingMaskIntoConstraints="NO" id="DQW-YN-2PD">
+                                <rect key="frame" x="62.5" y="20" width="250" height="75"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="DQW-YN-2PD" secondAttribute="height" multiplier="10:3" id="4rP-VZ-GHY"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" alpha="0.69999999999999996" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" verticalCompressionResistancePriority="749" text="D R I V E R  A P P  F O R" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="I4m-Ts-4RD">
+                                <rect key="frame" x="82" y="90" width="212" height="24"/>
+                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="20"/>
+                                <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" alpha="0.69999998807907104" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" verticalCompressionResistancePriority="751" text="H O T E L  S H U T T L E S" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="glA-M8-pWa">
+                                <rect key="frame" x="72.5" y="114" width="230.5" height="24"/>
+                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="20"/>
+                                <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Welcome to the registration process" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9Hr-Py-4Hp">
+                                <rect key="frame" x="50" y="158" width="276.5" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Please enter your 6 digit unique identification number" textAlignment="natural" lineBreakMode="characterWrap" baselineAdjustment="alignBaselines" minimumScaleFactor="0.29999999999999999" adjustsLetterSpacingToFitWidth="YES" translatesAutoresizingMaskIntoConstraints="NO" id="rvt-Vm-o13">
+                                <rect key="frame" x="26" y="242.5" width="323" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="0.66666666666666663" green="0.66666666666666663" blue="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VHq-Oj-wBq">
+                                <rect key="frame" x="50" y="293.5" width="276.5" height="30"/>
+                                <color key="backgroundColor" red="0.19607843137254902" green="0.58823529411764708" blue="0.5490196078431373" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <state key="normal" title="NEXT">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                            </button>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Unique ID" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="517-7i-HgE">
+                                <rect key="frame" x="26" y="189" width="323" height="30"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="VHq-Oj-wBq" firstAttribute="width" secondItem="9Hr-Py-4Hp" secondAttribute="width" id="0sx-Y4-ca4"/>
+                            <constraint firstItem="glA-M8-pWa" firstAttribute="top" secondItem="I4m-Ts-4RD" secondAttribute="bottom" id="1zj-nY-Kp3"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="517-7i-HgE" secondAttribute="trailing" constant="10" id="25H-o4-fT8"/>
+                            <constraint firstItem="rvt-Vm-o13" firstAttribute="centerX" secondItem="Mz2-on-aOQ" secondAttribute="centerX" id="6wq-NW-bSB"/>
+                            <constraint firstItem="rvt-Vm-o13" firstAttribute="width" secondItem="517-7i-HgE" secondAttribute="width" id="AHW-it-igw"/>
+                            <constraint firstAttribute="trailingMargin" relation="greaterThanOrEqual" secondItem="DQW-YN-2PD" secondAttribute="trailing" constant="10" id="CcQ-Q3-fQo"/>
+                            <constraint firstItem="VHq-Oj-wBq" firstAttribute="centerX" secondItem="Mz2-on-aOQ" secondAttribute="centerX" id="Ct5-g5-caD"/>
+                            <constraint firstItem="VHq-Oj-wBq" firstAttribute="top" secondItem="rvt-Vm-o13" secondAttribute="bottom" constant="30" id="G8W-BA-g1v"/>
+                            <constraint firstItem="rvt-Vm-o13" firstAttribute="top" relation="greaterThanOrEqual" secondItem="517-7i-HgE" secondAttribute="bottom" constant="10" id="IY3-Sn-5C3"/>
+                            <constraint firstItem="517-7i-HgE" firstAttribute="centerX" secondItem="Mz2-on-aOQ" secondAttribute="centerX" id="J38-dg-dQQ"/>
+                            <constraint firstItem="517-7i-HgE" firstAttribute="top" secondItem="9Hr-Py-4Hp" secondAttribute="bottom" constant="10" id="M8f-KL-W5b"/>
+                            <constraint firstItem="DQW-YN-2PD" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="Mz2-on-aOQ" secondAttribute="leadingMargin" constant="10" id="PAi-GB-iMV"/>
+                            <constraint firstItem="517-7i-HgE" firstAttribute="leading" secondItem="Mz2-on-aOQ" secondAttribute="leadingMargin" constant="10" id="S5I-6H-ZJ6"/>
+                            <constraint firstItem="DQW-YN-2PD" firstAttribute="centerX" secondItem="Mz2-on-aOQ" secondAttribute="centerX" id="aqE-JA-SaE"/>
+                            <constraint firstItem="glA-M8-pWa" firstAttribute="centerX" secondItem="Mz2-on-aOQ" secondAttribute="centerX" id="f8z-hc-9J6"/>
+                            <constraint firstItem="9Hr-Py-4Hp" firstAttribute="top" secondItem="glA-M8-pWa" secondAttribute="bottom" constant="20" id="ljx-XD-Evf"/>
+                            <constraint firstItem="9Hr-Py-4Hp" firstAttribute="centerX" secondItem="Mz2-on-aOQ" secondAttribute="centerX" id="rHB-Qs-GMU"/>
+                            <constraint firstItem="I4m-Ts-4RD" firstAttribute="centerX" secondItem="Mz2-on-aOQ" secondAttribute="centerX" id="veP-gx-mYj"/>
+                            <constraint firstItem="DQW-YN-2PD" firstAttribute="top" secondItem="0tD-x3-Wro" secondAttribute="bottom" id="xat-l8-XAf"/>
+                            <constraint firstItem="I4m-Ts-4RD" firstAttribute="top" secondItem="DQW-YN-2PD" secondAttribute="bottom" constant="-5" id="xdD-aQ-qHt"/>
+                            <constraint firstAttribute="centerYWithinMargins" secondItem="VHq-Oj-wBq" secondAttribute="bottom" constant="10" id="yLH-ja-uHe"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="cVz-mY-z6E" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1488.8" y="115.59220389805098"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="zsG-w0-A3y">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="KUc-qr-H3l" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="pMx-Dm-aHc">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="mUU-wy-Hhu" kind="relationship" relationship="rootViewController" id="7DY-3G-vWZ"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="uyB-6G-NO9" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="208.80000000000001" y="116.49175412293854"/>
         </scene>
     </scenes>
     <resources>
+        <image name="logoUTShuttleDark" width="250" height="75"/>
         <image name="logoUTShuttleLite" width="250" height="75"/>
     </resources>
 </document>
