--- a/UTShuttleSwift/Base.lproj/Main.storyboard
+++ b/UTShuttleSwift/Base.lproj/Main.storyboard
@@ -463,7 +463,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" allowsSelection="NO" rowHeight="100" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="5xF-hi-lrH">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" keyboardDismissMode="onDrag" dataMode="prototypes" style="plain" separatorStyle="none" allowsSelection="NO" rowHeight="100" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="5xF-hi-lrH">
                                 <rect key="frame" x="0.0" y="20" width="375" height="647"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <view key="tableHeaderView" contentMode="scaleToFill" id="4Cc-7q-f63">
@@ -504,7 +504,7 @@
                                                     <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                                     <textInputTraits key="textInputTraits"/>
                                                 </textField>
-                                                <label opaque="NO" userInteractionEnabled="NO" tag="101" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VfH-Mr-nvP">
+                                                <label opaque="NO" userInteractionEnabled="NO" tag="101" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VfH-Mr-nvP">
                                                     <rect key="frame" x="15" y="30.5" width="355" height="29.5"/>
                                                     <fontDescription key="fontDescription" type="system" weight="medium" pointSize="16"/>
                                                     <color key="textColor" red="0.58823529411764708" green="0.58823529411764708" blue="0.58823529411764708" alpha="1" colorSpace="calibratedRGB"/>
@@ -534,20 +534,20 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="OgH-5S-Y2a">
-                                                    <rect key="frame" x="50" y="29.5" width="315" height="1"/>
+                                                    <rect key="frame" x="85" y="29.5" width="280" height="1"/>
                                                     <color key="backgroundColor" white="0.66666666669999997" alpha="0.30157208590000001" colorSpace="calibratedWhite"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="1" id="4hQ-RV-9YK"/>
                                                     </constraints>
                                                 </view>
-                                                <textField opaque="NO" clipsSubviews="YES" tag="100" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="bottom" text="TEXT" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="eOq-2h-du2">
-                                                    <rect key="frame" x="60" y="0.0" width="305" height="24.5"/>
+                                                <textField opaque="NO" clipsSubviews="YES" tag="100" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="bottom" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="eOq-2h-du2">
+                                                    <rect key="frame" x="93.5" y="0.0" width="271.5" height="24.5"/>
                                                     <nil key="textColor"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                                     <textInputTraits key="textInputTraits"/>
                                                 </textField>
                                                 <label opaque="NO" userInteractionEnabled="NO" tag="101" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Mobile Number" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EnD-uO-SzC">
-                                                    <rect key="frame" x="60" y="30.5" width="310" height="29.5"/>
+                                                    <rect key="frame" x="93.5" y="30.5" width="276.5" height="29.5"/>
                                                     <fontDescription key="fontDescription" type="system" weight="medium" pointSize="16"/>
                                                     <color key="textColor" red="0.58823529411764708" green="0.58823529411764708" blue="0.58823529411764708" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
@@ -560,17 +560,25 @@
                                                     </constraints>
                                                     <state key="normal" image="US.png"/>
                                                 </button>
+                                                <label opaque="NO" userInteractionEnabled="NO" tag="103" contentMode="left" horizontalHuggingPriority="253" verticalHuggingPriority="251" text="+123 " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="b5Z-z0-lLg">
+                                                    <rect key="frame" x="48" y="5.5" width="40.5" height="19.5"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
                                             </subviews>
                                             <constraints>
+                                                <constraint firstItem="eOq-2h-du2" firstAttribute="leading" secondItem="b5Z-z0-lLg" secondAttribute="trailing" constant="5" id="0BK-Ao-OpE"/>
+                                                <constraint firstItem="eOq-2h-du2" firstAttribute="centerY" secondItem="b5Z-z0-lLg" secondAttribute="centerY" constant="-3" id="9YN-9I-5w7"/>
+                                                <constraint firstItem="b5Z-z0-lLg" firstAttribute="leading" secondItem="hSC-ge-sHN" secondAttribute="trailing" constant="8" id="F2Z-3N-ngx"/>
                                                 <constraint firstItem="eOq-2h-du2" firstAttribute="top" secondItem="pCy-Be-jLM" secondAttribute="top" id="HHL-uq-9TN"/>
                                                 <constraint firstAttribute="trailing" secondItem="OgH-5S-Y2a" secondAttribute="trailing" constant="10" id="KgB-hV-reA"/>
                                                 <constraint firstItem="hSC-ge-sHN" firstAttribute="centerY" secondItem="pCy-Be-jLM" secondAttribute="centerY" id="LeN-4V-JUE"/>
                                                 <constraint firstItem="OgH-5S-Y2a" firstAttribute="centerY" secondItem="pCy-Be-jLM" secondAttribute="centerY" id="NIu-Et-cpe"/>
                                                 <constraint firstItem="OgH-5S-Y2a" firstAttribute="top" secondItem="eOq-2h-du2" secondAttribute="bottom" constant="5" id="Sjc-Hi-ECb"/>
-                                                <constraint firstItem="eOq-2h-du2" firstAttribute="leading" secondItem="pCy-Be-jLM" secondAttribute="leading" constant="60" id="YXW-DG-g1A"/>
                                                 <constraint firstAttribute="trailing" secondItem="eOq-2h-du2" secondAttribute="trailing" constant="10" id="cm4-9V-XV7"/>
                                                 <constraint firstItem="EnD-uO-SzC" firstAttribute="top" secondItem="OgH-5S-Y2a" secondAttribute="bottom" id="d4J-tV-hFG"/>
-                                                <constraint firstItem="OgH-5S-Y2a" firstAttribute="leading" secondItem="pCy-Be-jLM" secondAttribute="leading" constant="50" id="i3K-1g-1xw"/>
+                                                <constraint firstItem="OgH-5S-Y2a" firstAttribute="leading" secondItem="pCy-Be-jLM" secondAttribute="leading" constant="85" id="i3K-1g-1xw"/>
                                                 <constraint firstAttribute="trailing" secondItem="EnD-uO-SzC" secondAttribute="trailing" constant="5" id="i40-4t-krs"/>
                                                 <constraint firstAttribute="bottom" secondItem="EnD-uO-SzC" secondAttribute="bottom" id="iYL-AL-Rr2"/>
                                                 <constraint firstItem="hSC-ge-sHN" firstAttribute="leading" secondItem="pCy-Be-jLM" secondAttribute="leading" constant="10" id="jZu-sV-st7"/>
